[package]
name = "yknotify-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
notify-rust = "4.11"
eyre = "0.6"
color-eyre = "0.6"
chrono = "0.4"
