[package]
name = "yknotify-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
color-eyre = "0.6"
eyre = "0.6"
notify-rust = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "time", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
